--- a/style.scss
+++ b/style.scss
@@ -7,10 +7,8 @@ $box-color: #1b232f;
 $focal-color: #324157;
 $light-color: #ffffff;
 $button-color: $darker-color;
-
 $card-bg-color: hsl(218, 27%, 20%);
 $card-bg-color-hover: hsl(218, 27%, 30%);
-
 $game-list-bg: #1a2230;
 $game-list-bg: #1c2534;
 $nav-bg-color: #141c28;
@@ -67,7 +65,7 @@ $space-700: 7rem;
 $section-margin: 1.3rem;
 $project-padding: 1.5rem;
 $section-vertical-space: 2.2rem;
-$project-width: calc(100% - (2 * $project-padding));
+$project-inline-size: calc(100% - (2 * $project-padding));
 
 *,
 *::before,
@@ -82,8 +80,8 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   background: rgb(28, 29, 32);
   background: $page-bg;
-  max-width: 37.5rem;
-  width: $project-width;
+  max-inline-size: 37.5rem;
+  inline-size: $project-inline-size;
   margin-inline: auto;
   margin: 0 auto;
   font-family: "Lato", sans-serif;
@@ -120,7 +118,7 @@ input {
 img,
 svg {
   display: block;
-  max-width: 100%;
+  max-inline-size: 100%;
 }
 
 img,
@@ -128,7 +126,7 @@ picture,
 svg,
 video {
   display: block;
-  max-width: 100%;
+  max-inline-size: 100%;
   cursor: pointer;
   object-fit: cover;
 }
@@ -166,7 +164,7 @@ button:hover {
 }
 
 ::-webkit-scrollbar {
-  height: 2px;
+  block-size: 2px;
 }
 
 ::-webkit-scrollbar-thumb {
@@ -175,8 +173,8 @@ button:hover {
 
 .visually-hidden {
   position: absolute;
-  width: 1px;
-  height: 1px;
+  inline-size: 1px;
+  block-size: 1px;
   padding: 0;
   margin: -1px;
   overflow: hidden;
@@ -185,50 +183,56 @@ button:hover {
 }
 
 input:focus {
-  caret-width: 3px; /* Change the cursor width to 2px */
+  caret-inline-size: 3px; /* Change the cursor width to 2px */
 }
 
 // CAROUSEL
 .carousel {
   position: relative;
-  padding-block-start: 75%;
+  padding-block-start: 56.25%; // 16:9 ratio (adjust as needed)
   filter: drop-shadow(0 0 10px #0003);
   perspective: 100px;
 
   .carousel__viewport {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
     display: flex;
+    position: absolute;
+    inset-block-start: 0;
+    inset-inline-end: 0;
+    inset-block-end: 0;
+    inset-inline-start: 0;
     overflow-x: scroll;
-    counter-reset: item;
-    scroll-behavior: smooth;
     scroll-snap-type: x mandatory;
+    scroll-behavior: smooth;
+    -webkit-overflow-scrolling: touch;
+    counter-reset: item;
   }
+
   .carousel__slide {
-    position: relative;
     flex: 0 0 100%;
-    width: 100%;
-    height: 100%;
-    background-color: $bg-color;
+    scroll-snap-align: center;
+    position: relative;
+    inline-size: 100%;
+    block-size: 100%;
+    background-color: $bg-color; // Replace or remove
     counter-increment: item;
-    object-fit: cover;
   }
+
   .carousel__snapper {
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    scroll-snap-align: center;
+    inset-block-start: 0;
+    inset-inline-start: 0;
+    inline-size: 100%;
+    block-size: 100%;
+
     img {
-      width: 100%;
-      height: 100%;
+      inline-size: 100%;
+      block-size: 100%;
       object-fit: cover;
+      display: block;
     }
   }
+
+  // Optional: auto-play animations (can be disabled later)
   @media (hover: hover) {
     .carousel__snapper {
       animation-name: toNext, snap;
@@ -241,56 +245,50 @@ input:focus {
       animation-name: toStart, snap;
     }
   }
+
   @media (prefers-reduced-motion: reduce) {
     .carousel__snapper {
       animation-name: none;
     }
   }
+
   &:hover .carousel__snapper,
   &:focus-within .carousel__snapper {
     animation-name: none;
   }
+
+  // Nav buttons
   .carousel__prev,
   .carousel__next {
     position: absolute;
-    top: 50%;
-    width: 2.8rem;
+    inset-block-start: 50%;
+    transform: translateY(-50%);
+    inline-size: 2.6rem;
     aspect-ratio: 1;
-    border-radius: $border-sm;
-    background-position: center center;
-    text-align: center;
-    background: url(/icons/Arrow.svg);
+    border-radius: 50%;
+    background-color: rgba(0, 0, 0, 0.6);
+    border: none;
+    cursor: pointer;
     background-repeat: no-repeat;
-    background-size: 1.6rem 1.6rem;
-    background-position: 50%;
+    background-size: 1.2rem 1.2rem;
+    background-position: center;
+    z-index: 10;
+    background-position: 60%;
+    background-size: 0.9rem;
   }
 
   .carousel__prev {
-    background: url(/icons/Arrow.svg);
-    background-repeat: no-repeat;
-    transform: translateY(-50%);
-    background-position: 50%;
-    background-size: 1.2rem 1.2rem;
-    rotate: 180deg;
-    background-color: $slider-arrow-bg;
-    top: 40%;
-  }
-  .carousel__next {
-    background-size: 1.2rem 1.2rem;
-    transform: translateY(-50%);
-    background-color: $slider-arrow-bg;
+    inset-inline-start: 1rem;
+    background-image: url("/icons/Arrow.svg");
+    transform: translateY(-50%) rotate(180deg);
   }
 
-  .carousel::before,
-  .carousel__prev {
-    left: $space-200;
-  }
-
-  .carousel::after,
   .carousel__next {
-    right: $space-200;
+    inset-inline-end: 1rem;
+    background-image: url("/icons/Arrow.svg");
   }
 }
+
 //// END OF CAROUSEL
 ///
 // SEARCH BAR
@@ -302,7 +300,7 @@ form.search-bar {
   align-items: center;
   color: $highlight-color;
   border: 2px solid $focal-color;
-  width: $project-width;
+  inline-size: $project-inline-size;
   border-radius: $border-lg;
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1);
 
@@ -311,9 +309,9 @@ form.search-bar {
     font-size: $font-sm;
     background-color: transparent;
     margin-block-start: 0.3rem;
-    margin-bottom: 0.3rem;
+    margin-block-end: 0.3rem;
     border: none;
-    width: $project-width;
+    inline-size: $project-inline-size;
     padding: 0.35rem 0.1rem;
     cursor: auto;
     &::placeholder {
@@ -326,7 +324,7 @@ form.search-bar {
     img.search-bar__button__icon {
       color: inherit;
       background: inherit;
-      height: 1.7rem;
+      block-size: 1.7rem;
       aspect-ratio: 1;
       object-fit: contain;
       transition: 0.1s;
@@ -337,9 +335,9 @@ form.search-bar {
 // NAVIGATION
 nav {
   position: fixed;
-  top: 0;
-  right: -300px;
-  width: 300px;
+  inset-block-start: 0;
+  inset-inline-end: -300px;
+  inline-size: 300px;
   z-index: 9999999;
   opacity: 0;
   transition: opacity 0.3s;
@@ -359,12 +357,12 @@ nav.show {
   justify-content: space-between;
   z-index: 99999;
   background-color: rgba($color: $nav-bg-color, $alpha: 0.98);
-  right: 0;
-  top: 0;
+  inset-inline-end: 0;
+  inset-block-start: 0;
   font-size: $font-md;
   padding: $space-200;
-  width: 65%;
-  height: fit-content;
+  inline-size: 65%;
+  block-size: fit-content;
   ul {
     margin-block-start: 3rem;
     display: flex;
@@ -376,7 +374,7 @@ nav.show {
       margin-inline: auto;
       display: block;
       text-align: center;
-      width: 30%;
+      inline-size: 30%;
       box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1);
     }
     li {
@@ -389,22 +387,20 @@ nav.show {
     }
   }
   .close-btn {
-    $--height: $space-200;
-    height: $--height;
+    $--block-size: $space-200;
+    block-size: $--block-size;
     aspect-ratio: 1;
     display: inline-block;
     position: absolute;
-    top: 1rem;
-    right: calc($space-200 - 1rem);
+    inset-block-start: 1rem;
+    inset-inline-end: calc($space-200 - 1rem);
     &::after {
       content: "\d7";
       position: absolute;
       inset: 0;
       color: $light-color;
-      font-size: $--height;
-      line-height: $--height;
-      text-align: center;
-      line-height: $--height;
+      font-size: $--block-size;
+      line-height: $--block-size;
       text-align: center;
     }
   }
@@ -432,15 +428,15 @@ header {
     justify-content: space-between;
     align-items: center;
     margin-inline: auto;
-    width: $project-width;
+    inline-size: $project-inline-size;
     .header__logo {
-      width: 2.5rem;
+      inline-size: 2.5rem;
       aspect-ratio: 1;
       display: flex;
       align-items: center;
       gap: 0.3rem;
       img.logo__image {
-        width: 150px;
+        inline-size: 150px;
         aspect-ratio: 1;
       }
       a.logo__link {
@@ -488,14 +484,14 @@ section.tag-btns {
   display: grid;
   place-items: center normal;
   gap: 0.5rem;
-  width: $project-width;
+  inline-size: $project-inline-size;
   margin-inline: auto;
   cursor: pointer;
   grid-template-columns: repeat(auto-fit, minmax(190px, 1fr));
   .tag-btn {
     display: flex;
-    width: 100%;
-    height: 8rem;
+    inline-size: 100%;
+    block-size: 8rem;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -506,16 +502,16 @@ section.tag-btns {
     position: relative;
     border-radius: $border-sm;
     img.tag-btn-icon {
-      margin-bottom: $border-lg;
+      margin-block-end: $border-lg;
       z-index: 99999;
     }
     img.tab-btn-img {
       position: absolute;
       opacity: 10%;
       background-color: $focal-color;
-      margin-bottom: 0;
-      height: 100%;
-      width: 100%;
+      margin-block-end: 0;
+      block-size: 100%;
+      inline-size: 100%;
       object-fit: cover;
     }
     p {
@@ -537,7 +533,7 @@ section.tag-btns {
 
 // GAME LIST
 section.game-list {
-  width: $project-width;
+  inline-size: $project-inline-size;
   margin-inline: auto;
   position: relative;
   .game-list__tabs-container {
@@ -579,17 +575,17 @@ section.game-list {
       display: flex;
       flex-direction: column;
       gap: 0.5rem;
-      margin-bottom: $space-200;
+      margin-block-end: $space-200;
       padding-inline-end: 0;
       .game-list__card {
         display: flex;
         background-color: $card-bg-color;
-        width: 100%;
+        inline-size: 100%;
         border-radius: $border-sm;
         cursor: pointer;
         box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.22);
         .game-list__card__img {
-          width: 50%;
+          inline-size: 50%;
           aspect-ratio: 21/9;
           border-radius: $border-sm 0 0 $border-sm;
         }
@@ -606,7 +602,7 @@ section.game-list {
             flex-direction: column;
             .game-list__card__title {
               font-size: $font-sm;
-              line-height: 1.4;
+              line-block-size: 1.4;
             }
             .game-list__card__genre {
               color: rgba($color: $light-color, $alpha: 0.65);
@@ -643,9 +639,9 @@ section.game-list {
               //   padding: 0.1rem 0.2rem;
               //   margin: 0;
               //   position: absolute;
-              //   top: 50%;
+              //   inset-block-start: 50%;
               //   transform: translateY(-50%);
-              //   right: 4.1rem;
+              //   inset-inline-end: 4.1rem;
               //   font-size: 0.8rem;
               //   border-radius: 0.2em;
               // }
@@ -667,14 +663,14 @@ section.game-list {
   }
   .arrow {
     position: absolute;
-    right: 0;
+    inset-inline-end: 0;
     background: $card-bg-color;
     border-radius: $border-sm;
-    width: 1.25rem;
+    inline-size: 1.25rem;
     aspect-ratio: 1/1.4;
     display: grid;
     place-content: center;
-    top: 0.2rem;
+    inset-block-start: 0.2rem;
     transition: $hover-transition-time;
     &:hover,
     &:focus {
@@ -686,17 +682,17 @@ section.game-list {
   }
   .previous-arrow {
     transform: rotate(180deg);
-    left: 0;
+    inset-inline-start: 0;
   }
 }
 
 // QUEUE
 section.queue {
-  width: $project-width;
+  inline-size: $project-inline-size;
   margin-inline: auto;
   h2.queue__header {
     font-size: 1.2rem;
-    margin-bottom: $border-lg;
+    margin-block-end: $border-lg;
   }
   .queue__game-container {
     position: relative;
@@ -709,8 +705,8 @@ section.queue {
       position: absolute;
       transition: $hover-transition-time ease-in-out;
       inset: 0;
-      height: fit-content;
-      width: fit-content;
+      block-size: fit-content;
+      inline-size: fit-content;
       margin: auto;
       background-color: $transparent-button-color;
       padding: 0.6em 3.5em;
@@ -730,18 +726,18 @@ section.queue {
     }
     display: flex;
     .queue__game-1 {
-      width: 40%;
+      inline-size: 40%;
       z-index: 999;
       box-shadow: 0 0px 3px rgb(0 0 0 / 0.2);
     }
     .queue__game-2 {
-      width: 44%;
+      inline-size: 44%;
       margin-inline-start: calc(-2.3 * $space-200);
       clip-path: polygon(0 0, 100% 10%, 100% 90%, 0% 100%);
       z-index: 998;
     }
     .queue__game-3 {
-      width: 29%;
+      inline-size: 29%;
       clip-path: polygon(0 0, 100% 10%, 100% 90%, 0% 100%);
     }
   }
@@ -750,7 +746,7 @@ section.queue {
 // FOOTER
 footer {
   margin-block-start: 3rem;
-  width: $project-width;
+  inline-size: $project-inline-size;
   margin-inline: auto;
 
   .footer-container {
@@ -760,7 +756,7 @@ footer {
       align-items: center;
       flex-direction: column;
       margin-inline: auto;
-      width: 100%;
+      inline-size: 100%;
       text-align: center;
       gap: 0.5rem;
       ul {
@@ -777,7 +773,7 @@ footer {
   }
   .footer__bottom {
     margin-block-start: $space-200;
-    margin-bottom: $space-100;
+    margin-block-end: $space-100;
     align-items: baseline;
     display: flex;
     justify-content: space-between;
@@ -795,17 +791,17 @@ footer {
   margin: 2rem 0;
   h2 {
     font-size: $font-lg;
-    margin-bottom: 2rem;
+    margin-block-end: 2rem;
     text-align: center;
   }
 }
 
-@media screen and (max-width: 550px) {
+@media screen and (max-inline-size: 550px) {
   .game-list__card {
     display: flex;
     flex-direction: column;
   }
   .game-list__card__img {
-    width: 100% !important;
+    inline-size: 100% !important;
   }
 }
